Fix alignment of filter quake in wide aspects

--- a/index.less
+++ b/index.less
@@ -564,10 +564,10 @@ body {
     }
     #filter-quake {
       position:absolute;
-      left:~"max(20vw, calc(50vw - 415px))";
+      left:~"max(20vw, calc(50vw - 498px))";
       width:~"max(498px, 60vw)";
       box-sizing:border-box;
-      padding:18px;
+      padding:~"calc(12px + .8rem) 18px 6px 18px";
       background:white;
       transform:translateY(-100%);
       transition-property:transform, box-shadow;
